<resources>
    <string name="app_name">Social Threads</string>
    <string name="app_version">1.0</string>
    <string name="app_year">2021</string>
    <string name="app_copyright">raccoonsquare.com</string>
    <string name="app_email">mysocial987@gmail.com</string>
    <string name="app_site">https://mysocialnet.me</string>
    <string name="facebook_app_id">306922517618441</string>
    <string name="fb_login_protocol_scheme">fb435345345345345</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="rewarded_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="letSocialize">Let\'s Socialize</string>
    <string name="continueWithEmail">Continue with Email</string>
    <string name="continueWithGoogle">Continue with Google</string>
    <string name="continueWithFacebook">Continue with Facebook</string>
    <string name="dontHaveAnAccount">Don\'t have an account?</string>
    <string name="SignUp">Sign up</string>
    <string name="usernameOrEmailAddress">Username or Email address</string>
    <string name="enterUsernameOrEmailAddress">Enter username or email address</string>
    <string name="password">Password</string>
    <string name="enterPassword">Enter password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="forgotPasswordN">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="Both">Both</string>
    <string name="letsLogYouIn">Let\'s Log you in.</string>
    <string name="welcomeBackYouveBeenMissed">Welcome back, You\'ve been missed!</string>
    <string name="enterYourRegisteredEmail">Enter your registered email we sent\non email to reset password.</string>
    <string name="emailAddress">Email address</string>
    <string name="enterEmailAddress">Enter email address</string>
    <string name="send">Send</string>
    <string name="emailHasBeenSent">Email has been sent</string>
    <string name="Please_check_your_email_and_click_in_the_received_link_to_reset_a_password.">Please check your email and click\nin the received link to reset a password.</string>
    <string name="create_an_account.">Create an account.</string>
    <string name="Full_Name">Full Name</string>
    <string name="city">City</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="Enter_Full_Name">Enter Full Name</string>
    <string name="Username">Username</string>
    <string name="EnterUsername">Enter username</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="createProfile">Create Profile</string>
    <string name="Date_of_Birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="finish">Finish</string>
    <string name="addFile">Add file</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="writeSomethingHere">Start a thread...</string>
    <string name="shareWith">Share With</string>
    <string name="friends">Friends</string>
    <string name="Public">Public</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="your_Profile_Link">Your Profile Link</string>
    <string name="your_personalized_link_on_My_Social">Your personalized link on My Social</string>
    <string name="anyoneOn">Anyone on or off My Social</string>
    <string name="yourFriendsOnMySocial">Your friends on My Social</string>
    <string name="howAreYouFeeling">How are you feeling?</string>
    <string name="deletePost">Delete Post</string>
    <string name="doYouWantToDeleteThis">Do you want to delete this post</string>
    <string name="doYouWantToPublishThis">Do you want to publish this post on your wall?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="reportPost">Report</string>
    <string name="selectReportType">Select Report Type</string>
    <string name="like">Like</string>
    <string name="comment">Comments</string>
    <string name="communities">Communities</string>
    <string name="share">Share</string>
    <string name="createPost">New thread</string>
    <string name="post">Post</string>
    <string name="add">Add</string>
    <string name="linkCopied">Link copied</string>
    <string name="addYourComment">Add your reply...</string>
    <string name="enter_a_few_words_to_search">Enter a few words to search for on\nthe social.</string>
    <string name="searchHere">Search here...</string>
    <string name="searchFilter">Search Filter</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="Apply">Apply</string>
    <string name="creditOne">30 Credits</string>
    <string name="creditTwo">70 Credits</string>
    <string name="creditThree">120 Credits</string>
    <string name="commentsGifts">Comments Gifts...</string>
    <string name="writeYourMessage">Write your message...</string>
    <string name="notPostYet">Not post yet</string>
    <string name="copyLink">Copy Link</string>
    <string name="name">Name</string>
    <string name="action_login">Log in</string>
    <string name="action_signup">Sign up</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_continue">Continue</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_block">Block</string>
    <string name="action_about">About</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_copy">Copy</string>
    <string name="action_save">Save</string>
    <string name="action_send">Send</string>
    <string name="action_open">Open</string>
    <string name="action_edit">Edit</string>
    <string name="action_reply">Reply</string>
    <string name="settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_report">Report</string>
    <string name="action_remove">Delete</string>
    <string name="action_remove_chat">Delete chat</string>
    <string name="action_deactivate">Deactivate</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_more">Load more</string>
    <string name="action_post">Post</string>
    <string name="action_search">Search</string>
    <string name="action_retry">Retry</string>
    <string name="action_turn_on">Turn on</string>
    <string name="edit_Profile">Edit Profile</string>
    <string name="done">Done</string>
    <string name="new_community">New Community</string>
    <string name="Notifications">Activity</string>
    <string name="action_turn_off">Turn off</string>
    <string name="action_select_birth">Date of Birth</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Choose from gallery</string>
    <string name="action_copy_url">Copy link</string>
    <string name="action_open_url">Open in a browser</string>
    <string name="settings_allow_comments">Allow comments to my posts</string>
    <string name="settings_allow_messages">Receive messages from anyone</string>
    <string name="settings_allow_messages_summary">You will be able to receive Direct Messages from any user even if the user is not your friend.</string>
    <string name="action_share">Share</string>
    <string name="action_share_on_wall">On my wall</string>
    <string name="Marketplace">Marketplace</string>
    <string name="New_Listing">New Listing</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_new">New post</string>
    <string name="action_profile_edit_photo">Edit photo</string>
    <string name="action_profile_edit_cover">Edit cover</string>
    <string name="action_profile_edit">Edit</string>
    <string name="action_login_with_facebook">Log in with Facebook</string>
    <string name="action_signup_with_facebook">Sign up with Facebook</string>
    <string name="action_connect_with_facebook">Connect with Facebook</string>
    <string name="action_remove_connection">Remove connection</string>
    <string name="action_regular_signup">Back to the regular registration form</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="label_profile_report_0">Spam</string>
    <string name="label_profile_report_1">Hate speech or violence</string>
    <string name="label_profile_report_2">Nudity or Pornography</string>
    <string name="label_profile_report_3">Fake profile</string>
    <string name="label_profile_report_4">Piracy</string>
    <string name="label_sex_undefined">Gender Not Set</string>
    <string name="label_sex_male">Gender Male</string>
    <string name="label_sex_female">Gender Female</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_login">Username</string>
    <string name="placeholder_fullname">Fullname</string>
    <string name="placeholder_location">Location</string>
    <string name="placeholder_facebook_page">Facebook page</string>
    <string name="placeholder_instagram_page">Instagram page</string>
    <string name="placeholder_bio">Bio</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_subject">Subject</string>
    <string name="placeholder_support_detail">What are you contacting us about?</string>
    <string name="placeholder_current_password">Current password</string>
    <string name="placeholder_new_password">New password</string>
    <string name="placeholder_item_category">Category</string>
    <string name="placeholder_item_title">Title</string>
    <string name="placeholder_item_login">Username, email or phone</string>
    <string name="placeholder_item_passw">Password</string>
    <string name="placeholder_item_url">Web site</string>
    <string name="label_online">Online</string>
    <string name="settings_notifications_likes">Likes</string>
    <string name="settings_notifications_comments">Comments</string>
    <string name="settings_notifications_messages">Private messages</string>
    <string name="settings_notifications_comment_reply">Reply to comment</string>
    <string name="action_create_group">Create Community</string>
    <string name="label_group_category">Community subject</string>
    <string name="label_group_name">Name</string>
    <string name="label_group_link">Community link (Short name)</string>
    <string name="label_group_desc">Community description</string>
    <string name="label_group_location">Location</string>
    <string name="label_group_website">Website</string>
    <string name="label_group_founded">Founded</string>
    <string name="label_group_allow_posts">All Community members are allowed to write\nposts and comments to posts.</string>
    <string name="label_group_allow_comments">All community members are allowed to leave comments to posts</string>
    <string name="settings_notifications_gifts">Gifts</string>
    <string name="label_sex">Gender</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_activity">Last Active</string>
    <string name="action_gift">Gift</string>
    <string name="label_only_with_photo">Only with photo</string>
    <string name="label_additional">Additional</string>
    <string name="settings_notifications_friends_requests">Friend Requests</string>
</resources>