<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/ivLine"
        android:src="@drawable/ic_line"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_5sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_gift"
        style="@style/TVSemiBold"
        android:textSize="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_15sdp"
        android:layout_gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/ivLine"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/ivImageChoose"
        app:srcCompat="@drawable/ic_hearts"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_78sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGift" />

    <TextView
        android:id="@+id/tvCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3 Credits"
        style="@style/TVRegular"
        android:textSize="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_15sdp"
        android:layout_gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/ivImageChoose"
        app:layout_constraintStart_toStartOf="@+id/ivImageChoose"
        app:layout_constraintEnd_toEndOf="@+id/ivImageChoose"
        />

    <EditText
        android:id="@+id/etComment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        style="@style/TVRegular"
        android:hint="@string/commentsGifts"
        android:backgroundTint="@color/white"
        android:maxLines="5"
        android:layout_marginVertical="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvCredit"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnsend"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:text="@string/send"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginVertical="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_28sdp"
        android:background="@drawable/bg_gredient"
        app:layout_constraintTop_toBottomOf="@+id/etComment"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>